# My-Million-Dollars-Project

./: .env.example  App.tsx  README.md  check_balance.js  check_balance_esm.js  database.rules.json  firestore.rules  index.css  index.html  index.tsx  metadata.json  package-lock.json  package.json  prev_layout.txt  start-blockchain.ps1  supabase_migration.sql  tailwind.config.js  types.ts  vercel.json  vite.config.ts
.github/workflows/: android-build.yml
argus-gateway/: requirements.txt
argus-gateway/argus_gateway/: __init__.py  main.py
argus-gateway/argus_gateway/routers/: __init__.py  agent.py  dag.py  tx.py
argus-gateway/argus_gateway/services/: __init__.py  dag_client.py  parent_selector.py
argus-gateway/argus_rl/: __init__.py  ghostdag_env.py  k_optimizer.py  train.py
argus-node/: Cargo.toml  LICENSE  README.md
argus-node/crates/argus-agent/: Cargo.toml
argus-node/crates/argus-agent/src/: channels.rs  lca.rs  lib.rs  recovery.rs  state_machine.rs
argus-node/crates/argus-cli/: Cargo.toml
argus-node/crates/argus-cli/src/: main.rs
argus-node/crates/argus-ghostdag/: Cargo.toml
argus-node/crates/argus-ghostdag/src/: block.rs  coloring.rs  dag.rs  errors.rs  lib.rs  ordering.rs
argus-node/crates/argus-linearizer/: Cargo.toml
argus-node/crates/argus-linearizer/src/: lib.rs  schema.rs  server.rs  stream.rs
argus-node/crates/argus-pybridge/: Cargo.toml
argus-node/crates/argus-pybridge/src/: lib.rs
components/: AdvancedEditor.tsx  AnimatedNumber.tsx  ArgusLogo.tsx  ContentRenderer.tsx  CookieConsent.tsx  CustomCursor.tsx  EthLogo.tsx  Layout.tsx  LiquidGlassFilters.tsx  Logo.tsx  MatrixBackground.tsx  PageTransition.tsx  PublicLayout.tsx  SEO.tsx  ScrollToTop.tsx  Sidebar.tsx  Skeleton.tsx  Tooltip.tsx
context/: AuthContext.tsx  LockContext.tsx
mobile/: app.json  package-lock.json  package.json  theme.ts  types.ts
mobile/app/: _layout.tsx  login.tsx  notifications.tsx  onboarding.tsx  setup.tsx
mobile/app/(tabs)/: _layout.tsx  index.tsx  more.tsx  nft.tsx  tasks.tsx  vault.tsx
mobile/components/: ArgusLogo.tsx  ProgressRing.tsx  Skeleton.tsx  StatCard.tsx  Toast.tsx
mobile/constants/: index.ts
mobile/context/: AuthContext.tsx  NotificationContext.tsx
mobile/services/: ArgusSynapseService.ts  EthereumService.ts  HapticService.ts  firebase.ts
pages/: About.tsx  AdminPanel.tsx  Architecture.tsx  ArgusLaunchpad.tsx  ArgusScan.tsx  Careers.tsx  Contact.tsx  Dashboard.tsx  Docs.tsx  Explorer.tsx  Landing.tsx  Leaderboard.tsx  Legal.tsx  Login.tsx  NFTSection.tsx  ProfileSetup.tsx  Referrals.tsx  SocialTasks.tsx  Tokenomics.tsx  Validators.tsx  Vault.tsx  Whitepaper.tsx  index.html  package.json
public/: android-app-release.apk  argus-protocol.ipa  favicon_capture.html  favicon_temp.html  manifest.json  robots.txt  sitemap.xml
services/: ArgusSynapseService.ts  EthereumService.ts  TokenPriceService.ts  firebase.ts  supabase.ts
src/pages/: AdminPanel.tsx
