[workspace]
resolver = "2"
members = [
    "crates/argus-ghostdag",
    "crates/argus-agent",
    "crates/argus-linearizer",
    "crates/argus-pybridge",
    "crates/argus-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
