[package]
name = "argus-agent"
version.workspace = true
edition.workspace = true

[dependencies]
argus-ghostdag = { path = "../argus-ghostdag" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
