[package]
name = "argus-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.36", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
argus-linearizer = { path = "../argus-linearizer" }
argus-ghostdag = { path = "../argus-ghostdag" }
argus-agent = { path = "../argus-agent" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json"] }
