[package]
name = "argus-linearizer"
version.workspace = true
edition.workspace = true

[dependencies]
argus-ghostdag = { path = "../argus-ghostdag" }
argus-agent = { path = "../argus-agent" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio-tungstenite = "0.21"
futures-util = "0.3"
jsonrpsee = { version = "0.22", features = ["server", "macros"] }
hyper = { version = "1", features = ["full"] }

[dev-dependencies]
tokio = { workspace = true }
